--- a/ParkenDD/Supporting Files/Info.plist
+++ b/ParkenDD/Supporting Files/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>DEVELOPMENT</string>
+	<string>531</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationWhenInUseUsageDescription</key>
